fixed scrollbars for windows/no mac machines

--- a/src/styles/_about.sass
+++ b/src/styles/_about.sass
@@ -6,9 +6,9 @@
 	align-items: center
 	justify-content: center
 	overflow-x: hidden
-	overflow-y: scroll
+	overflow-y: auto
 	-webkit-overflow-scrolling: touch
-	
+
 	@media(max-width: 500px)
 		align-items: stretch
 		justify-content: flex-start
