--- a/src/styles/_textGen.sass
+++ b/src/styles/_textGen.sass
@@ -28,7 +28,7 @@
 		align-items: center
 		justify-content: center
 		text-align: center
-		overflow-y: scroll
+		overflow-y: auto
 		overflow-x: hidden
 		word-wrap: break-word
 		overflow-wrap: break-word
